  - Added DSC-IT 100 Security System integration - IP to serial (Greg Rapp)
  - Lagarto server (panStamps) integration (Daniel Berenguer)
  - Support 'custom' sensor types with virtual commands (ORCJAVA-217)
  - KNX: added distinct levels for 'DIM' and 'SCALE' commands that allow
    set values to be configured for buttons, e.g. 'DIM 50' to dim directly
    to 50% (Eric Bariaux, ORCJAVA-71).
  - HTTP protocol: methods GET, POST, PUT and DELETE are now supported.
    For HTTP/JSON return documents, a JSON Path expression is supported.
    HTTP content-type headers are supported. For outgoing HTTP request, 
    a user agent header is included which contains 'OpenRemoteController'  
    as agent value which HTTP applications can use to identify requests 
    originating from the controller. Internally, the implementation has 
    been converted to use URIs instead of URLs which resolves an issue with 
    lack of encoding of HTTP parameters  which contain which contain white 
    spaces or other special characters (Marcus Redeker, ORCJAVA-260)
  - One Wire: Added possibility to specify temperature values in
    either Celsius (default), Kelvin, Fahrenheit or Rankine scales, data
    property added for sending values to switches (Marcus Redeker)
  - Shell Command Execution: polling interval and regular expression
    filtering on return values supported, including regexp groups to 
    read in multiple sensor values at once. Support for using shell
    commands with sliders added (Marcus Redeker, Ivan Martinez)
  - Telnet: polling interval property added (Marcus Redeker), dedicated
    telnet log directory and telnet debug logs added (Juha Lindfors, ORCJAVA-328)
  - Date/Time : values updated once per minute instead of once per second
    (Marcus Redeker)
  - UDP : send hex values by prefixing command data with '0x' string.
    Receiving of UDP packets added (Marcus Redeker)
  - TCP : send hex values by prefixing command data with '0x' string,