@@ -16,6 +16,7 @@ Yann Philippe
 Greg Rapp
 Daniel Berenguer
 Ivan Martinez
+Stefan Langerman
 OpenRemote, Inc. employees and contractors.
 
 Number of third party Open Source components are used in OpenRemote each
